message Reply {
    required int32 id = 1;
    required int32 error_code = 2;
}

message CreateScene {
    required string name = 1;
}

message DestroyScene {
    required int32 id = 1;
}

message CreateDataObject {
    enum Type {
        UV = 0;
        COLOR = 1;
        VERTEX = 2;
        NORMAL = 3;
        INDEX = 4;
        MATRIX = 5;
    }
    required int32 scene_id = 1;
    required Type type = 2;
    required int32 offset = 3;
    required int32 size = 4;
    required int32 nr_strides = 5;
    required int32 stride = 6;
}

message CreateTextureObject {
    enum Format {
        RGBA_8 = 0;
    }
    required int32 scene_id = 1;
    required int32 offset = 3;
    required int32 size = 4;
    required int32 width = 5;
    required int32 height = 6;
    required Format format = 7;
    required int32 type = 8;
}

message SetRenderBuffer {
    required int32 scene_id = 1;
    required int32 nr_objects = 2;
}

message DestroyDataObject {
    required int32 scene_id = 1;
    required int32 id = 2;
}

message CreateGeometryObject {
    required int32 scene_id = 1;
    required int32 vertex_id = 2;
    required int32 normal_id = 3;
    required int32 index_id = 4;
}

message CreateMeshColor {
    required int32 scene_id = 1;
    required int32 geometry_id = 2;
    required float r = 3;
    required float g = 4;
    required float b = 5;
    required float a = 6;
}

message CreateMeshTexture {
    required int32 scene_id = 1;
    required int32 geometry_id = 2;
    required int32 texture_id = 3;
    required int32 uv_id = 4;
}
